--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,5 +70,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.6.0'
     implementation 'com.google.firebase:firebase-auth:20.0.2'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    def camerax_version = "1.0.0-beta12"
+// CameraX core library using camera2 implementation
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+// CameraX Lifecycle Library
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+// CameraX View class
+    implementation "androidx.camera:camera-view:1.0.0-alpha19"
 }
 apply plugin: 'com.google.gms.google-services'
